# contractscope

./: .gitignore  README.md  pyproject.toml  watchlist.json
.github/workflows/: ci.yml
contractscope/: __main__.py  config.py  models.py
contractscope/analysis/: aggregate.py  rank.py
contractscope/ingest/: client.py
contractscope/storage/: db.py  repo.py  schema.py
tests/: conftest.py  test_models.py  test_rank.py  test_repo.py
