[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "contractscope"
version = "0.1.0"
description = "Track and analyze U.S. federal contract awards for a watchlist of contractors."
requires-python = ">=3.11"
dependencies = ["requests"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true